chore: fixing column and row gap

--- a/src/components/GamesContainer/GameCard/GameCard.module.css
+++ b/src/components/GamesContainer/GameCard/GameCard.module.css
@@ -4,8 +4,7 @@
 
     color: #fff;
     min-width: 24rem;
-    width: 28.8rem;
-    margin: 1.6rem;
+    width: 90vw;
     min-height: 33.2rem;
 }
 
@@ -15,7 +14,6 @@
         width: 45.7vw;
         min-width: 32rem;
         max-width: 38rem;
-        margin: 1.2rem 0.9rem 1.2rem 0.9rem;
         min-height: 32rem;
     }
 }
